# MeasuringComputerPerformance

./: .gitignore  .gitmodules  README.md
hw1/: 性能分析工具的学习与使用.html  性能分析工具的学习与使用.md
hw10/: hw10.md
hw10/MyPinTool/: BranchPredictor.cpp  MyPinTool.cpp  makefile
hw11/: hw10.md  hw11.md  prime_sieve-64.c
hw12/: hw12.md
hw2/: 时间测试工具的使用.md
hw2/gettimeofday/: CMakeLists.txt  main.cpp  rdtsc.cpp
hw3/: SPEC CPU 2006 调研.md
hw4/: 利用LLVM进行程序分析.md
hw5/: cache.c  mem.c  read.asm  测量带宽.md
hw6/: 证明.md
hw7/: 学习使用mpiP工具.md
hw8/: compile.sh  hw8.md  profile.c  test.c  test.sh  test_graph500.sh
hw9/: hw9.md  inject.c
